--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
     ],
     "license": "MIT",
     "require": {
-        "illuminate/support": "^9.0",
-        "symfony/thanks": "^1.2"
+        "illuminate/support": "^9.0"
     },
     "autoload": {
         "psr-4": {
